--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 Django>=4.0,<5.0
 djangorestframework>=3.14,<4.0
-psycopg2-binary>=2.9,<3.0  # For PostgreSQL (if you're using PostgreSQL)
-mysqlclient>=2.1,<3.0      # For MySQL (if you're using MySQL)
+django-filter>=23.1,<24.0
+psycopg2-binary>=2.9,<3.0
+gunicorn>=20.1,<21.0
+whitenoise>=6.3,<7.0
+debug-toolbar>=4.0,<5.0
