--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Django>=3.2,<4.0
-djangorestframework>=3.14,<4.0
-django-filter>=23.1,<24.0
-psycopg2-binary>=2.9,<3.0
-gunicorn>=20.1,<21.0
-whitenoise>=6.3,<7.0
-debug-toolbar>=4.0,<5.0
+asgiref==3.8.1
+Django==5.1
+django-debug-toolbar==4.4.6
+pillow==10.4.0
+sqlparse==0.5.1
+tzdata==2024.1
